# flo-gateway

./: .gitignore  config.py  gateway.py  gateway.sample.json  pyproject.toml
src/base/: base_llm_service.py
src/controller/: invoke.py
src/resolver/: service_resolver.py
src/services/: azure_openai_service.py
test/: azure_model_studio.py  azure_openai.py  chat_anthropic.py  langchain_test.py  mixtral_test.py
